--- a/css/12BoolFlex.css
+++ b/css/12BoolFlex.css
@@ -28,39 +28,75 @@
 
 /*Colonne*/
 
-.col-1 {
+.col-xs-1 {
     flex-basis: calc((100% / 12) *1);
 }
-.col-2 {
+.col-xs-2 {
     flex-basis: calc((100% / 12) *2);
 }
-.col-3 {
+.col-xs-3 {
     flex-basis: calc((100% / 12) *3);
 }
-.col-4 {
+.col-xs-4 {
     flex-basis: calc((100% / 12) *4);
 }
-.col-5 {
+.col-xs-5 {
     flex-basis: calc((100% / 12) *5);
 }
-.col-6 {
+.col-xs-6 {
     flex-basis: calc((100% / 12) *6);
 }
-.col-7 {
+.col-xs-7 {
     flex-basis: calc((100% / 12) *7);
 }
-.col-8 {
+.col-xs-8 {
     flex-basis: calc((100% / 12) *8);
 }
-.col-9 {
+.col-xs-9 {
     flex-basis: calc((100% / 12) *9);
 }
-.col-10 {
+.col-xs-10 {
     flex-basis: calc((100% / 12) *10);
 }
-.col-11 {
+.col-xs-11 {
     flex-basis: calc((100% / 12) *11);
 }
-.col-12 {
+.col-xs-12 {
     flex-basis: calc((100% / 12) *12);
+}
+
+/*offset*/
+
+.col-xs-offset-1 {
+    margin-left: calc((100% / 12) *1);
+}
+.col-xs-offset-2 {
+    margin-left: calc((100% / 12) *2);
+}
+.col-xs-offset-3 {
+    margin-left: calc((100% / 12) *3);
+}
+.col-xs-offset-4 {
+    margin-left: calc((100% / 12) *4);
+}
+.col-xs-offset-5 {
+    margin-left: calc((100% / 12) *5);
+}
+.col-xs-offset-6 {
+    margin-left: calc((100% / 12) *6);
+}
+.col-xs-offset-7 {
+    margin-left: calc((100% / 12) *7);
+}
+.col-xs-offset-8 {
+    margin-left: calc((100% / 12) *8);
+}
+.col-xs-offset-9 {
+    margin-left: calc((100% / 12) *9);
+}
+.col-xs-offset-10 {
+    margin-left: calc((100% / 12) *10);
+}
+.col-xs-offset-11 {
+    margin-left: calc((100% / 12) *11);
 }
