--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,12 @@
 .back-green {
-    border: 3px solid blue;
-    background-color: #00e165;
-    color: red;
+    border: 10px solid blue !important;
+    background-color: #00e165 !important;
     text-align: center;
     min-height: 50px;
     line-height: 50px;
 }
+
+h2 {
+    margin: 20px 0;
+}
+
